fix: style fixes on alignment control

--- a/src/blocks/blocks/button-group/editor.scss
+++ b/src/blocks/blocks/button-group/editor.scss
@@ -72,3 +72,7 @@
 		}
 	}
 }
+
+.buttons-alignment-control .components-button-group .components-button.has-icon {
+	padding: 6px 12px;
+}
